--- a/beta/index.html
+++ b/beta/index.html
@@ -161,12 +161,7 @@ function alertAds() {
       <input class="form-control" type="text" id="backgroundImg"><br>
        Bar Color<br>
       <input id="barColor" class="jscolor form-control" value="2296f3"><br><br>
-      <button onclick="#" class="btn btn-success"></button>
-      <button onclick="#" class="btn btn-success"></button>
-       <button onclick="#" class="btn btn-success"></button>
-       <button onclick="#" class="btn btn-success"></button>
-       <br>
-      <button onclick="updateBackgroundImg()" class="btn btn-success">Save</button>
+      <button onclick="updateSettings()" class="btn btn-success">Save</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
