--- a/beta/index.html
+++ b/beta/index.html
@@ -171,6 +171,7 @@ function alertAds() {
       <input class="form-control" type="text" id="TiFilesSearch"><br>
       
       <button onclick="searchFiles()" class="btn btn-primary">Search</button>
+      <button onclick="addFile()" class="btn btn-primary">Store</button>
   </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
