--- a/beta/index.html
+++ b/beta/index.html
@@ -170,8 +170,8 @@ function alertAds() {
        File<br>
       <input class="form-control" type="text" id="TiFilesSearch"><br>
       
-      <button onclick="searchFiles()" class="btn btn-primary">Search</button><br><br>
-      <button onclick="addFile()" class="btn btn-primary">Store</button><br><br>
+      <button onclick="searchFiles()" class="btn btn-primary">Search your Tiles</button><br><br>
+      <button onclick="addFile()" class="btn btn-primary">Add a document</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
        </div>
