--- a/beta/index.html
+++ b/beta/index.html
@@ -177,7 +177,7 @@ function alertAds() {
               <ul class="dropdown-menu" style="list-style: none;">
                 <li><a href="index.html?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
                 <li><a href="index.html?app=4">New TiSheet <span class="glyphicon glyphicon-th-list"></span></a></li>
-                <li><a href="index.html?app=9">New TiSlide <span class="glyphicon glyphicon-blackboard"></span></a></li>
+                <!-- <li><a href="index.html?app=9">New TiSlide <span class="glyphicon glyphicon-blackboard"></span></a></li> -->
                 <li><a onclick="redirect()">Last Opened Document <span class="glyphicon glyphicon-folder-open"></span></a></li>
                 <li><a onclick="addFile()">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></a></li>
               </ul>
