--- a/beta/index.html
+++ b/beta/index.html
@@ -183,7 +183,7 @@ function alertAds() {
               </ul>
             </li>
       </ul>
-      <button onclick="save()" class="btn btn-primary">Save Your Changes</button>
+    <!--<button onclick="save()" class="btn btn-primary">Save Your Changes</button>-->
       <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
