--- a/beta/index.html
+++ b/beta/index.html
@@ -183,7 +183,7 @@ function alertAds() {
               </ul>
             </li>
       </ul>
-    <!--<button onclick="save()" class="btn btn-primary">Save Your Changes</button>-->
+      <button onclick="save()" class="btn btn-primary">Save Your Changes</button>
       <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
@@ -222,7 +222,7 @@ function alertAds() {
    <button class="btn btn-primary" id="tisheets-add-row" onclick="newRow()">Add Row</button>
    <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet()">Save</button>
    <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()" style="display: none;">Edit</button>
-  <button class="btn btn-primary" onclick="newColumn()">Add Column</button>
+ <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
 </div>
 <div id="tislides" style="display: none;">
   <h3>TiSlides</h3>
