--- a/beta/index.html
+++ b/beta/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://bootswatch.com/3/paper/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" crossorigin="anonymous">
     <link rel="stylesheet" href="tiles.css" crossorigin="anonymous">
     <title>Home - TiMedia</title>
   </head>
@@ -202,11 +202,6 @@ function alertAds() {
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
    <style>
-     a {
-       color: Black;
-       text-decoration: none;
-     }
-     
      table, th, td {
         border: 1px solid gray;
         border-collapse: collapse;
