--- a/beta/index.html
+++ b/beta/index.html
@@ -266,6 +266,7 @@ function alertAds() {
     <script src="settings.js"></script>
     <script src="tiles.js"></script>
     <script src="slides.js"></script>
+    <script src="speech.js"></script>
     </div>
   </body>
 </html>
