--- a/beta/index.html
+++ b/beta/index.html
@@ -232,13 +232,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <h3 id="tisheets-header" >TiSheets</h3>
    <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
    <div class='formatting-bar' id="sheets-formatting-bar">
-   <button style='float: left; border-radius: 0px;' class='btn btn-primary'  onclick="document.execCommand('bold');"><b>B</b></button>
-   <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('italic');"><i>I</i></button>
-   <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('underline');"><u>U</u></button>
-   <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('superscript');">xⁱ</button>
-   <button style='float: left; border-radius: 0px;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
-   <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
-   <button style='float: left; border-radius: 0px;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
+   <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary'  onclick="document.execCommand('bold');"><b>B</b></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('italic');"><i>I</i></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('underline');"><u>U</u></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('superscript');">xⁱ</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>
    <br><br><br><br>
    </div>
    <style>
