--- a/beta/index.html
+++ b/beta/index.html
@@ -232,14 +232,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <h3 id="tisheets-header" >TiSheets</h3>
    <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
    <div class='formatting-bar' id="sheets-formatting-bar">
-   <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary'  onclick="document.execCommand('bold');"><b>B</b></button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('italic');"><i>I</i></button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('underline');"><u>U</u></button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('superscript');">xⁱ</button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;'class='btn btn-primary' onclick="document.execCommand('subscript');">xₐ</button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('undo');">↰</button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="document.execCommand('redo');">↱</button>
-      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-primary' onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>
+   <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success'  onclick="document.execCommand('bold');"><b>B</b></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('italic');"><i>I</i></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('underline');"><u>U</u></button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('superscript');">xⁱ</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;'class='btn btn-success' onclick="document.execCommand('subscript');">xₐ</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('undo');">↰</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="document.execCommand('redo');">↱</button>
+      <button style='float: left; border-radius: 0px; box-shadow: none;' class='btn btn-success' onclick="saveSheet()"><span class="glyphicon glyphicon-floppy-save"></span></button>
    <br><br><br><br>
    </div>
    <style>
@@ -270,11 +270,11 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <td>Value</td>
   </tr>
 </table><br>
-   <button class="btn btn-primary" id="tisheets-add-row" onclick="newRow()">Add Row</button>
-   <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>
+   <button class="btn btn-succcess" id="tisheets-add-row" onclick="newRow()">Add Row</button>
+   <button class="btn btn-succcess" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>
    <button class="btn btn-success" id="tisheets-edit" onclick="editSheet()" style="display: none; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;"><span class='glyphicon glyphicon-pencil'></span></button>
-   <button class="btn btn-primary" id="tisheets-reader" onclick="sheetReader()" style="display: none;">Reader View</button>
- <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
+   <button class="btn btn-success" id="tisheets-reader" onclick="sheetReader()" style="display: none;">Reader View</button>
+ <!-- <button class="btn btn-success" onclick="newColumn()">Add Column</button>-->
 </div>
 <div id="tismile" style="display: none;">
   <h3>TiSmile <b>Beta</b></h3>
