--- a/beta/index.html
+++ b/beta/index.html
@@ -270,8 +270,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <td>Value</td>
   </tr>
 </table><br>
-   <button class="btn btn-succcess" id="tisheets-add-row" onclick="newRow()">Add Row</button>
-   <button class="btn btn-succcess" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>
+   <button class="btn btn-success" id="tisheets-add-row" onclick="newRow()">Add Row</button>
+   <button class="btn btn-success" id="tisheets-save" onclick="saveSheet(); window.location.href = '?app=7';">Save</button>
    <button class="btn btn-success" id="tisheets-edit" onclick="editSheet()" style="display: none; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;"><span class='glyphicon glyphicon-pencil'></span></button>
    <button class="btn btn-success" id="tisheets-reader" onclick="sheetReader()" style="display: none;">Reader View</button>
  <!-- <button class="btn btn-success" onclick="newColumn()">Add Column</button>-->
